[gd_scene load_steps=6 format=2]

[ext_resource path="res://InventoryManager.gd" type="Script" id=1]
[ext_resource path="res://InventoryScene.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.329412, 0.152941, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.329412, 0.152941, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.329412, 0.152941, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerInventory" type="Panel" parent="."]
anchor_left = 0.098
anchor_top = 0.1
anchor_right = 0.342
anchor_bottom = 0.85
margin_left = -0.351997
margin_top = 3.8147e-06
margin_right = -0.207977
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CategoryName" type="Panel" parent="PlayerInventory"]
anchor_left = 0.008
anchor_top = 0.004
anchor_right = 0.992
anchor_bottom = 0.093
margin_left = -2.38419e-07
margin_top = 0.2
margin_right = -3.05176e-05
margin_bottom = 0.149998
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="PlayerInventory/CategoryName"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.913725, 0.94902, 0.286275, 1 )
text = "Username"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInventoryScroller" type="ScrollContainer" parent="PlayerInventory"]
anchor_top = 0.093
anchor_right = 1.0
anchor_bottom = 0.933
margin_top = 0.150002
margin_right = -1.52588e-05
margin_bottom = 0.149994
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot" type="GridContainer" parent="PlayerInventory/PlayerInventoryScroller"]
columns = 3

[node name="Weight" type="Panel" parent="PlayerInventory"]
anchor_top = 0.933
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 0.149994
margin_right = -7.62939e-06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Panel" parent="PlayerInventory"]
anchor_left = 0.5
anchor_top = 0.933
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.62939e-06
margin_top = 0.149994
margin_right = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetInventory" type="Panel" parent="."]
anchor_left = 0.658
anchor_top = 0.1
anchor_right = 0.902
anchor_bottom = 0.85
margin_left = 0.208008
margin_top = 3.8147e-06
margin_right = 0.35199
margin_bottom = 3.05176e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategoryName" type="Panel" parent="PlanetInventory"]
anchor_left = 0.008
anchor_top = 0.004
anchor_right = 0.992
anchor_bottom = 0.093
margin_top = 0.2
margin_bottom = 0.149998
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VendorName" type="Label" parent="PlanetInventory/CategoryName"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.913725, 0.94902, 0.286275, 1 )
text = "RandomVendor"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetStockScroller" type="ScrollContainer" parent="PlanetInventory"]
anchor_top = 0.093
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.150002
margin_right = 1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot" type="GridContainer" parent="PlanetInventory/PlanetStockScroller"]
columns = 3

[node name="ItemPrecision" type="Panel" parent="."]
anchor_left = 0.391
anchor_top = 0.6
anchor_right = 0.609
anchor_bottom = 0.85
margin_left = -0.384003
margin_top = 3.05176e-05
margin_right = 0.384033
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategoryName" type="Panel" parent="ItemPrecision"]
anchor_left = 0.009
anchor_top = 0.013
anchor_right = 0.991
anchor_bottom = 0.28
margin_left = -0.0160005
margin_top = 0.0500003
margin_right = 0.015976
margin_bottom = 7.62939e-06
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ItemPrecision/CategoryName"]
anchor_left = 0.005
anchor_right = 1.005
anchor_bottom = 1.0
margin_left = -0.1
margin_right = -0.100006
custom_colors/font_color = Color( 0.913725, 0.94902, 0.286275, 1 )
text = "Item Description"
align = 1
valign = 1

[node name="ItemDescription" type="Label" parent="ItemPrecision"]
visible = false
anchor_top = 0.28
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.14441e-05
margin_right = -1.52588e-05
margin_bottom = 4.57764e-05
